# gauntlet

./: .gitignore  CMakeLists.txt  README.md
include/: config.hh  runner.hh
src/: main.cc  pacman.cc
